# softmax-toy

./: .editorconfig  CMakeLists.txt
include/: softmax_cpu.h  softmax_cuda.cuh  tensor.h
src/: devtest.cc  softmax_test.cu
tools/: fmt_cpp_srcs.py
